--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI Image Generator</title>
-  <!---Linking Font Awesome from cdnjs for icons-->
+  <!-- Use local Font Awesome if CDN causes tracking issues -->
+  <!-- <link rel="stylesheet" href="assets/fontawesome/css/all.min.css"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div class="container">
-    <!---Header-->
     <header class="header">
       <div class="logo-wrapper">
         <div class="logo">
           <i class="fa-solid fa-wand-magic-sparkles"></i>
         </div>
-        <h1>AI Image Genarator</h1>
+        <h1>AI Image Generator</h1>
       </div>
       <button class="theme-toggle">
         <i class="fa-solid fa-moon"></i>
@@ -28,26 +28,21 @@
     <div class="main-content">
       <form action="#" class="prompt-form">
         <div class="prompt-container">
-          <textarea class="prompt-input" placeholder="Describe your imagination in deatils..." required
-            autofocus></textarea>
+          <textarea class="prompt-input" placeholder="Describe your imagination in detail..." required autofocus></textarea>
           <button type="button" class="prompt-btn">
             <i class="fa-solid fa-dice"></i>
           </button>
         </div>
 
-        <!----Prompt action/buttons--->
         <div class="prompt-actions">
           <div class="select-wrapper">
             <select class="custom-select" id="model-select" required>
               <option value="" selected disabled>Select Model</option>
               <option value="black-forest-labs/FLUX.1-dev">FLUX.1-dev</option>
-              <option value="black-forest-labs/FLUX.1-schnell">FLUX.
-                1-schnell</option>
-              <option value="stabilityai/stable-diffusion-x1-base-1.
-              0">Stable Diffusion XL</option>
-              <option value="runwayml/stable-diffusion-v1-5">Stable
-                Diffusion v1.5</option>
-              <option value="prompthero/openjourney">Openjourney</option>
+              <option value="black-forest-labs/FLUX.1-schnell">FLUX.1-schnell</option>
+              <option value="stabilityai/stable-diffusion-xl-base-1.0">Stable Diffusion XL</option>
+              <option value="runwayml/stable-diffusion-v1-5">Stable Diffusion v1.5</option>
+              <option value="prompthero/openjourney-v4">Openjourney</option>
             </select>
           </div>
 
@@ -55,18 +50,18 @@
             <select class="custom-select" id="count-select" required>
               <option value="" selected disabled>Image Count</option>
               <option value="1">1 Image</option>
-              <option value="2">2 Image</option>
-              <option value="3">3 Image</option>
-              <option value="4">4 Image</option>
+              <option value="2">2 Images</option>
+              <option value="3">3 Images</option>
+              <option value="4">4 Images</option>
             </select>
           </div>
 
           <div class="select-wrapper">
             <select class="custom-select" id="ratio-select" required>
               <option value="" selected disabled>Aspect Ratio</option>
-              <option value="1/1">Square(1:1)</option>
-              <option value="16/9">Landscape(16:9)</option>
-              <option value="9/16">Potrait(9:16)</option>
+              <option value="1/1">Square (1:1)</option>
+              <option value="16/9">Landscape (16:9)</option>
+              <option value="9/16">Portrait (9:16)</option>
             </select>
           </div>
 
@@ -74,13 +69,15 @@
             <i class="fa-solid fa-wand-sparkles"></i>Generate
           </button>
         </div>
-        <!---Result Gallery Grid-->
-        <div class="gallery-grid">
-        </div>
+
+        <!-- Result Gallery Grid -->
+        <div class="gallery-grid"></div>
       </form>
     </div>
   </div>
 
+  <!-- Load config first, then main script -->
+  <script src="config.js"></script>
   <script src="script.js"></script>
 </body>
 
